--- a/wercker.yml
+++ b/wercker.yml
@@ -22,12 +22,12 @@ build:
       - script:
           name: publish data
           code: |
-              ls -la ./input/
+              ls -la ./
               git clone https://github.com/eater-nz/api-eater-nz api
               cd api
-              git config user.email "`git --git-dir ../input/.git log -1 --pretty=%aN`"
-              git config user.email "`git --git-dir ../input/.git log -1 --pretty=%ae`"
+              git config user.email "`git --git-dir ../.git log -1 --pretty=%aN`"
+              git config user.email "`git --git-dir ../.git log -1 --pretty=%ae`"
               cp ../output/places.json .
               git add .
-              git commit -m "`git --git-dir ../input/.git log -1 --pretty=%B` (autocommit)"
+              git commit -m "`git --git-dir ../.git log -1 --pretty=%B` (autocommit)"
               git log
