--- a/wercker.yml
+++ b/wercker.yml
@@ -19,6 +19,10 @@ build:
           goals: clean compile exec:java
           cache_repo: true
           version: 3.5.2
+      - add-to-known_hosts:
+          hostname: ssh.example.com
+          fingerprint: 16:27:ac:a5:76:28:2d:36:63:1b:56:4d:eb:df:a6:48
+          type: rsa
       - add-ssh-key:
           keyname: API_SSH_KEY
       - script:
