--- a/wercker.yml
+++ b/wercker.yml
@@ -28,6 +28,7 @@ build:
       - script:
           name: publish data
           code: |
+              ssh -vvv git@github.com
               git config core.sshCommand "ssh -vvv"
               git clone git@github.com:eater-nz/api-eater-nz.git api
               cd api
